--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.4",
+    "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.9",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
