--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
+    "stripe": "^15.7.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
